--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <main id="main">
     <div>
-      <img src="/images/image-qr-code.png" alt="A QR code for FrontEndMentor.io">
+      <img href="/images/image-qr-code.png" alt="A QR code for FrontEndMentor.io">
 
       <p>Improve your front-end skills by building projects</p>
 
